--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/auth": "^19.2.2",
+    "@react-native-firebase/firestore": "^19.2.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -30,6 +33,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.1",
     "react-use": "^17.5.0",
+    "redux-flipper": "^2.0.3",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
@@ -47,6 +51,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-flipper": "^0.212.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
