--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dialog": "^9.3.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
